Fixed bug: resource loading from jar